# Autolinker.js

./: .bazeliskrc  .bazelrc  .editorconfig  .gitignore  .jshintrc  .lintstagedrc.json  .mocharc.json  .nycrc  .prettierignore  .prettierrc.json  .travis.yml  Autolinker.js  Autolinker.min.js  BUILD.bazel  Dockerfile  Gruntfile.js  MODULE.bazel  README.md  REPO.bazel  bower.json  docker-compose.yml  eslint.config.mjs  gulpfile.js  package-lock.json  package.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rollup.config.mjs  rollup.config.ts  test.out  test.ts  truncateSmart.js  truncateSmartTest.js  tsconfig.json  tsd.json  webpack.config.ts
.github/: main.yml
.github/workflows/: main.yml
benchmark/: benchmark.ts
benchmark/autolinker-1.8.3/: package.json
benchmark/autolinker-3.16.2/: package.json
benchmark/autolinker-4.1.0/: package.json
benchmark/linkify-it-5.0.0/: index.ts
benchmarks/: benchmarks.ts  input-text.ts  package.json  profile.ts  shared-autolinker-config.ts
benchmarks/anchorme-3.0.8/: index.ts  package.json
benchmarks/autolinker-1.8.3/: index.ts  package.json
benchmarks/autolinker-2.2.2/: index.ts  package.json
benchmarks/autolinker-3.16.2/: index.ts  package.json
benchmarks/autolinker-4.0.0/: index.ts  package.json
benchmarks/autolinker-4.0.1/: index.ts  package.json
benchmarks/autolinker-4.0.2/: package.json
benchmarks/autolinker-4.1.0/: package.json
benchmarks/autolinker-4.1.1/: package.json
benchmarks/autolinker-4.1.2/: index.ts  package.json
benchmarks/autolinker-4.1.3/: index.ts  package.json
benchmarks/autolinker-current/: index.ts
benchmarks/linkify-html-4.2.0/: index.ts
benchmarks/linkify-it-5.0.0/: index.ts  package.json
benchmarks/linkify-js-4.2.0/: package.json
benchmarks/linkify-string-4.2.0/: index.ts  package.json
benchmarks/linkifyjs-4.2.0/: index.ts  package.json
build-tools/: rollup-declarations-bundle.bzl  ts-bundle.bzl  ts-declarations.bzl
docs/: examples.json  index.html
docs/api/: data-0cfafcc469bd1e77c3fc920bb1640cdf.js  data-138b2937dd746576bed2c49602e81612.js  data-1459c0dbd0e7b0c4e9b8377784a06829.js  data-17ca8d737a3a0eef3f278659bc83a9bb.js  data-1b30d390b465ca8f0654fce2cf9e7182.js  data-1ba1ea7a0d133e9b11168b392350cf92.js  data-1df28a367878e4e8fc26f668c464fdb1.js  data-1ff97f5ef2ff6653cfd23f7c070b6bdf.js  data-2572d6441d8b6be48a84af0d99c518fa.js  data-3400bf0703ba4473aec3f5c1f59c0a3a.js  data-37c869b09c553fe6b0ebad63d5e0c84b.js  (+22 more)
live-example/: README.md  index.html  main.css  tsconfig.json
meteor/: export.js  helpers.js  package.js  test.js
scripts/: BUILD.bazel  alpha-numeric-and-marks-re.mts  build-docs.ts  build.ts  fix-common-js-output.ts  generate-char-utils.mts  generate-char-utils.ts  generate-known-tlds.mts  test-integration.ts  tsconfig.json  update-known-tlds.ts  update-tld-regex.ts
scripts/util/: exec-sync.ts
src/: AnchorTagBuilder.js  Autolinker.js  Autolinker.ts  EmailMatch.js  HtmlParser.js  HtmlTag.js  HtmlTag.ts  Match.js  MatchParser.js  MatchValidator.js  RegexLib.js  RegexLib.ts  TwitterMatch.js  UrlMatch.js  Util.js  Util.ts  anchor-tag-builder.ts  autolinker.ts  char-utils.ts  char.ts  html-tag.ts  index.ts  matcherRegexCompiled.js  matcherRegexSource.js  regex-lib.ts  string-utils.ts  uri-utils.ts  utils.ts  version.ts
tests/: AutolinkerSpec.js  AutolinkerSpec.ts  AutolinkerTest.js  HtmlParserSpec.js  HtmlTagSpec.js  UtilSpec.js  UtilSpec.ts  anchor-tag-builder.spec.ts  autolinker-directional.spec.ts  autolinker-email.spec.ts  autolinker-hashtag.spec.ts  autolinker-mention.spec.ts  autolinker-phone.spec.ts  autolinker-url-ipv4.spec.ts  autolinker-url-other.spec.ts  autolinker-url-protocol-relative.spec.ts  autolinker-url-scheme.spec.ts  autolinker-url-tld.spec.ts  autolinker-url.spec.ts  autolinker-within-html.spec.ts  autolinker-xss.spec.ts  autolinker.spec.ts  build.json  buildTests.bat  buildTests.sh  char-utils.spec.ts  html-tag.spec.ts  index.html  string-utils.spec.ts  util.spec.ts
tests-integration/: README.md  package.json  test-browser-umd.html  test-browser-umd.spec.ts  test-imports.spec.ts  test-require.spec.ts
(+330 files in other folders)
