# rules_js
bazel_dep(name = "aspect_rules_js", version = "2.3.7")
bazel_dep(name = "rules_nodejs", version = "6.3.5")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "22.14.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    npmrc = "//:.npmrc",
)
use_repo(npm, "npm")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
# Allows developers to use the matching pnpm version, for example:
# bazel run -- @pnpm --dir /home/runner/work/rules_js/rules_js install
use_repo(pnpm, "pnpm")

# rules_ts
bazel_dep(name = "aspect_rules_ts", version = "3.5.3")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts_ext.deps(
    ts_version_from = "//:package.json",
)

use_repo(rules_ts_ext, "npm_typescript")

# rules_esbuild
bazel_dep(name = "aspect_rules_esbuild", version = "0.22.1")

# bazel_skylib
bazel_dep(name = "bazel_skylib", version = "1.7.1")